src/tests/variable-declarations/6.txt
variable-declarations/6.c:2:20: error: incompatible types when initializing type 'int' using type 'float'
   int arr[3] = {1, 2.0, 4};
                    ^
